--- a/.babelrc
+++ b/.babelrc
@@ -1,21 +1,12 @@
 {
-  "env": {
-    "test": {
-      "presets": [
-        "env"
-      ],
-      "plugins": [
-        "transform-object-rest-spread"
-      ]
-    },
-    "development": {
-      "presets": [
-        ["env", { "modules": false }]
-      ],
-      "plugins": [
-        "transform-object-rest-spread"
-      ]
-    }
-  }
+	"env": {
+		"test": {
+			"presets": ["env"],
+			"plugins": ["transform-object-rest-spread", "transform-class-properties"]
+		},
+		"development": {
+			"presets": [["env", { "modules": false }]],
+			"plugins": ["transform-object-rest-spread", "transform-class-properties"]
+		}
+	}
 }
-
